[package]
name = "xivloop"
version = "0.2.0"
authors = ["Tylian <immatyger@gmail.com>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0"
libc = "0.2"
lame-sys = "0.1.2"
lewton = "0.10.1"

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["std", "derive", "color"]